fix: mobile heading alignment in some sections

--- a/themes/bella/styles/section.multicolumn.scss
+++ b/themes/bella/styles/section.multicolumn.scss
@@ -125,7 +125,7 @@
 
       .content-area {
         flex-direction: column;
-        align-items: flex-start;
+        align-items: var(--text-heading-alignment-mobile);
       }
     }
   }
